--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "author": "Udacity",
   "license": "ISC",
   "dependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/dotenv": "^8.2.0",
+    "bcrypt": "^5.1.0",
     "body-parser": "^1.19.0",
-    "db-migrate-pg": "^1.2.2",
     "db-migrate": "^0.11.13",
+    "db-migrate-pg": "^1.2.2",
     "express": "^4.17.1",
     "pg": "^8.5.1",
     "typescript": "^4.1.3"
